<resources>
    <string name="app_name">AMazeBySungwonKang</string>
    <string name="edit_message">Harlan is a perv</string>
    <string name="button_send">SEND</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_to_the_maze">Welcome to the Maze!</string>
    <string name="skill_level">Skill Level</string>
    <string name="explore">Explore</string>
    <string name="revisit">Revisit</string>
    <string name="maze_generator">Maze Generator</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_reached_the_goal">You reached the goal</string>
    <string name="total_path_length">Total Path Length:</string>
    <string name="play_again">play again</string>
    <string name="back">Back</string>
    <string name="full_maze">Full Maze</string>
    <string name="solution">Solution</string>
    <string name="walls">Walls</string>
    <string name="pause">Pause</string>
    <string name ="skillLevel">Skill Level</string>
    <string name="maze_driver">Maze Driver</string>
    <string name="finishScreen">Finish Screen</string>
    <string name="finishscreen">Finish Screen</string>
</resources>
