<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/congratulations"
            android:id="@+id/CongratulationsTextView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="42dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/you_reached_the_goal"
            android:id="@+id/GoalTextView"
            android:layout_below="@+id/CongratulationsTextView"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/PathLengthTextView"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/GoalTextView"
            android:layout_alignParentStart="true"
            android:layout_marginStart="44dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_again"
            android:id="@+id/PlayAgainButton"
            android:layout_marginBottom="42dp"
            android:layout_alignParentBottom="true"
            android:onClick="titleOnClick"
            android:layout_toEndOf="@+id/CongratulationsTextView" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yay"
            android:src="@drawable/yay"
            android:adjustViewBounds="true"
            android:maxWidth="400dp"
            android:maxHeight="400dp"
            android:scaleType="fitCenter"
            android:layout_alignBottom="@+id/PlayAgainButton" />

    </RelativeLayout>
</LinearLayout>
